TRIB-253: updates userAPI tests to use MockitoExtension.class (#257)
* TRIB-253: updates pom with mockito
- adds mockito junit jupiter dependency
- adds plugin information to suppress two sets of warnings
  - WARNING: A Java agent has been loaded dynamically (.../bytebuddy/byte-buddy-agent/1.14.16/byte-buddy-agent-1.14.16.jar)
  WARNING: If a serviceability tool is in use, please run with -XX:+EnableDynamicAgentLoading to hide this warning
  WARNING: If a serviceability tool is not in use, please run with -Djdk.instrument.traceUsage for more information
  WARNING: Dynamic loading of agents will be disallowed by default in a future release
  - OpenJDK 64-Bit Server VM warning: Sharing is only supported for boot loader classes because bootstrap classpath has been appended

* TRIB-253: updates UserAPITest with MockitoExt

* TRIB-253: updates UserAPITest changePassword
- removes unused user1

* TRIB-253: UserAPITest user info unique when taken
- updates isUserInformationUniqueWhen info is taken tests to use password constant